[gd_scene load_steps=14 format=3 uid="uid://ndsnlmj8jeit"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_t450k"]
[ext_resource type="PackedScene" uid="uid://daphbk4h288ud" path="res://scenes/Bullet.tscn" id="2_8bjlh"]
[ext_resource type="Texture2D" uid="uid://bh1or5q31avib" path="res://sprites/player_head.png" id="3_iqxuk"]
[ext_resource type="Texture2D" uid="uid://gn1irsmor841" path="res://sprites/player_arms.png" id="4_gssue"]
[ext_resource type="Texture2D" uid="uid://c7cxemdknqf4s" path="res://sprites/spotlight.webp" id="5_m51qk"]
[ext_resource type="Texture2D" uid="uid://y8eqjg4udaq3" path="res://sprites/flashlight.png" id="6_duho2"]
[ext_resource type="AudioStream" uid="uid://dohx1wnm5w18" path="res://sounds/gun.ogg" id="7_v8oof"]
[ext_resource type="AudioStream" uid="uid://bawdktx15111j" path="res://sounds/damage.ogg" id="8_qd2h0"]
[ext_resource type="Texture2D" uid="uid://8msul2ehhe3w" path="res://sprites/muzzle_flash.png" id="9_bhghh"]
[ext_resource type="Texture2D" uid="uid://dhg7x01w7hstj" path="res://sprites/muzzle_overlay.png" id="10_040dg"]
[ext_resource type="Texture2D" uid="uid://w081kwb8j6ka" path="res://sprites/crosshair.png" id="11_pswgd"]
[ext_resource type="Script" path="res://scripts/Crosshair.gd" id="12_kadh8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1i5gk"]
radius = 18.0

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(1, 36)
collision_layer = 2
collision_mask = 9
script = ExtResource("1_t450k")
bullet = ExtResource("2_8bjlh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_1i5gk")

[node name="PlayerHead" type="Sprite2D" parent="."]
z_index = 99
rotation = 1.5708
texture = ExtResource("3_iqxuk")

[node name="PlayerArms" type="Sprite2D" parent="."]
z_index = 98
rotation = 1.5708
texture = ExtResource("4_gssue")

[node name="PlayerLight" type="PointLight2D" parent="PlayerArms"]
position = Vector2(-0.0267944, -17.0268)
scale = Vector2(0.323946, 0.323946)
energy = 0.5
range_z_min = -500
range_z_max = 500
shadow_enabled = true
shadow_filter_smooth = 18.0
texture = ExtResource("5_m51qk")
texture_scale = 1.95

[node name="Flashlight" type="PointLight2D" parent="PlayerArms"]
position = Vector2(0.859082, 0.261997)
scale = Vector2(1.85188, 1.39557)
energy = 0.5
range_z_min = -500
range_z_max = 500
shadow_enabled = true
texture = ExtResource("6_duho2")
texture_scale = 1.95

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(27, 9)

[node name="Gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_v8oof")
volume_db = -5.0
pitch_scale = 1.47

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qd2h0")

[node name="MuzzleController" type="Sprite2D" parent="."]

[node name="MuzzleFlash" type="Sprite2D" parent="MuzzleController"]
z_index = 100
position = Vector2(41, 10)
rotation = 1.5708
texture = ExtResource("9_bhghh")

[node name="MuzzleOverlay" type="PointLight2D" parent="MuzzleController"]
position = Vector2(28, 9)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
energy = 2.0
texture = ExtResource("10_040dg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Crosshair" type="Sprite2D" parent="CanvasLayer"]
texture = ExtResource("11_pswgd")
centered = false
script = ExtResource("12_kadh8")
